--- a/contact.html
+++ b/contact.html
@@ -1,109 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Amazing Events</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact - Amazing Events</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
-            <div class="container-fluid justify-content-between">
-              <a class="navbar-brand w-50" href="/home.html">
-                <img class="logo" src="/image/amazing_brand.png" alt="logo Past Events">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav text-align-center text-wrap">
-                  <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
-                  <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
-                  <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
-                  <a class="nav-link text-center" href="#">Contact</a>
-                  <a class="nav-link text-center" href="/stats.html">Stats</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="bg-dark-subtle">
-
-        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/image/optional_banner_2.jpg" class="d-block carousel-img" alt="Banner Contact...">
-                <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
-                    <h5 class="fs-1 fw-bolder">Contact Us</h5>
-                    <p class="fs-3 mb-5 fw-bolder">Always in the front row.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/image/optional_banner_4.jpg" class="d-block carousel-img" alt="Banner Contact...">
-                <div class="carousel-caption d-none d-md-block mb-5 pb-5" data-bs-theme="light">
-                    <h5 class="fs-1 text-dark fw-bolder">Contact Us</h5>
-                    <p class="fs-3 mb-5 text-dark fw-bolder">The best exhibitions and art samples.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/image/optional_banner_5.jpg" class="d-block carousel-img" alt="Banner Contact...">
-                <div class="carousel-caption d-none d-md-block mb-5 pb-5">
-                    <h5 class="fs-1 fw-bolder">Contact Us</h5>
-                    <p class="fs-3 mb-5 fw-bolder">Here is the concert of your favorite artist.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+  <header>
+    <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
+      <div class="container-fluid justify-content-between">
+        <a class="navbar-brand w-50" href="/home.html">
+          <img class="logo" src="/image/amazing_brand.png" alt="logo Past Events">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav text-align-center text-wrap">
+            <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
+            <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
+            <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
+            <a class="nav-link text-center" href="#">Contact</a>
+            <a class="nav-link text-center" href="/stats.html">Stats</a>
           </div>
-
-          <section class="container-fluid justify-content-center col col-md-8 col-lg-5 py-3">
-            <form action="#" method="get" class="pt-5 container-fluid">
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Full name:</label>
-                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Jonathan Andrés Muchewicz">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Email:</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Message:</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-outline-dark">Submit</button>
-            </form>
-          </section>
-
-    </main>
-    <footer class="bg-dark" data-bs-theme="dark">
-      <div class="container-fluid row justify-content-center align-items-center p-2">
-        <div class="d-flex col-auto col-md-4 p-2 w-auto justify-content-around resp-md">
-          <a href="https://www.facebook.com/">
-            <img class="social" src="/image/facebook.png" alt="Logo facebook link">
-          </a>
-          <a href="https://www.instagram.com/">
-            <img class="social" src="/image/instagram.png" alt="Logo instagram link">
-          </a>
-          <a href="#">
-            <img class="social" src="/image/whatsapp.png" alt="Logo whatsapp link">
-          </a>
-        </div>
-        <div class="d-flex col-auto col-md-10  justify-content-end w-auto">
-          <p class="fs-6 mt-3">© 2024 - Muchewicz Jonathan Andrés</p>
         </div>
       </div>
-    </footer>
+    </nav>
+  </header>
+  <main class="bg-dark-subtle">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/image/optional_banner_2.jpg" class="d-block carousel-img" alt="Banner Contact...">
+          <div class="carousel-caption d-none d-md-block mb-5 pb-5">
+            <h5 class="fs-1 fw-bolder">Contact Us</h5>
+            <p class="fs-3 mb-5 fw-bolder">Always in the front row.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/image/optional_banner_4.jpg" class="d-block carousel-img" alt="Banner Contact...">
+          <div class="carousel-caption d-none d-md-block mb-5 pb-5">
+            <h5 class="fs-1 text-dark fw-bolder">Contact Us</h5>
+            <p class="fs-3 mb-5 text-dark fw-bolder">The best exhibitions and art samples.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/image/optional_banner_5.jpg" class="d-block carousel-img" alt="Banner Contact...">
+          <div class="carousel-caption d-none d-md-block mb-5 pb-5">
+            <h5 class="fs-1 fw-bolder">Contact Us</h5>
+            <p class="fs-3 mb-5 fw-bolder">Here is the concert of your favorite artist.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <div class="container-fluid justify-content-center col col-md-8 col-lg-5 py-3">
+      <form action="#" method="get">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Full name:</label>
+          <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Jonathan Andrés Muchewicz">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput2" class="form-label">Email:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label">Message:</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <div class="d-flex justify-content-end">
+          <button type="submit" class="btn btn-outline-dark">Submit</button>
+        </div>
+      </form>
+    </div>
+
+  </main>
+  <footer class="bg-dark" data-bs-theme="dark">
+    <div class="container-fluid row justify-content-center align-items-center p-2">
+      <div class="d-flex col-auto col-md-4 p-2 w-auto justify-content-around resp-md">
+        <a href="https://www.facebook.com/">
+          <img class="social" src="/image/facebook.png" alt="Logo facebook link">
+        </a>
+        <a href="https://www.instagram.com/">
+          <img class="social" src="/image/instagram.png" alt="Logo instagram link">
+        </a>
+        <a href="https://wa.me/12345">
+          <img class="social" src="/image/whatsapp.png" alt="Logo whatsapp link">
+        </a>
+      </div>
+      <div class="d-flex col-auto col-md-10  justify-content-end w-auto">
+        <p class="fs-6 mt-3">© 2024 - Muchewicz Jonathan Andrés</p>
+      </div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
