--- a/stats.html
+++ b/stats.html
@@ -1,61 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stats - Amazing Events</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stats - Amazing Events</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon">
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
-            <div class="container-fluid justify-content-between">
-              <a class="navbar-brand w-50" href="/home.html">
-                <img class="logo" src="/image/amazing_brand.png" alt="logo Past Events">
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-                <div class="navbar-nav text-align-center text-wrap">
-                  <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
-                  <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
-                  <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
-                  <a class="nav-link text-center" href="/contact.html">Contact</a>
-                  <a class="nav-link text-center" href="#">Stats</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <main class="bg-dark-subtle">
-
-          <section class="container-fluid justify-content-center col col-md-8 col-lg-5 py-3">
-            
-          </section>
-
-    </main>
-    <footer class="bg-dark" data-bs-theme="dark">
-      <div class="container-fluid row justify-content-center align-items-center p-2">
-        <div class="d-flex col-auto col-md-4 p-2 w-auto justify-content-around resp-md">
-          <a href="https://www.facebook.com/">
-            <img class="social" src="/image/facebook.png" alt="Logo facebook link">
-          </a>
-          <a href="https://www.instagram.com/">
-            <img class="social" src="/image/instagram.png" alt="Logo instagram link">
-          </a>
-          <a href="#">
-            <img class="social" src="/image/whatsapp.png" alt="Logo whatsapp link">
-          </a>
-        </div>
-        <div class="d-flex col-auto col-md-10  justify-content-end w-auto">
-          <p class="fs-6 mt-3">© 2024 - Muchewicz Jonathan Andrés</p>
+  <header>
+    <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
+      <div class="container-fluid justify-content-between">
+        <a class="navbar-brand w-50" href="/home.html">
+          <img class="logo" src="/image/amazing_brand.png" alt="logo Past Events">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="navbar-nav text-align-center text-wrap">
+            <a class="nav-link text-center" aria-current="page" href="/home.html">Home</a>
+            <a class="nav-link text-center" href="/upcomingEvents.html">Upcoming Events</a>
+            <a class="nav-link text-center" href="/pastEvents.html">Past Events</a>
+            <a class="nav-link text-center" href="/contact.html">Contact</a>
+            <a class="nav-link text-center" href="#">Stats</a>
+          </div>
         </div>
       </div>
-    </footer>
+    </nav>
+  </header>
+  <main class="bg-dark-subtle h-100 d-flex justify-content-center align-items-center">
+    <div class="main-stats d-flex justify-content-center align-items-center row">
+      <table class="table w-100">
+          <tr>
+            <th colspan="3" scope="row" class="text-light bg-dark">Events Statistics</th>
+          </tr>
+        <tbody class="text-center border-dark">
+          <tr>
+            <td class="bg-dark-subtle">Events with highest % of assistance</td>
+            <td class="bg-dark-subtle">Events with lowest % of assistance</td>
+            <td class="bg-dark-subtle">Events with larger capacity</td>
+          </tr>
+          <tr>
+            <td class="border">00</td>
+            <td class="border">00</td>
+            <td class="border">00</td>
+          </tr>
+        </tbody>
+          <tr>
+            <th colspan="3" scope="row" class="text-light bg-dark">Upcoming events statistics by category</th>
+          </tr>
+        <tbody class="text-center border-dark">
+          <tr>
+            <td class="bg-dark-subtle">Categories</td>
+            <td class="bg-dark-subtle">Revenues</td>
+            <td class="bg-dark-subtle">Porcentage of assistance</td>
+          </tr>
+          <tr>
+            <td class="border">00</td>
+            <td class="border">00</td>
+            <td class="border">00</td>
+          </tr>
+          <tr>
+            <td class="border">00</td>
+            <td class="border">00</td>
+            <td class="border">00</td>
+          </tr>
+        </tbody>
+          <tr>
+            <th colspan="3" scope="row" class="text-light bg-dark">Past events statistics by category</th>
+          </tr>
+        <tbody class="text-center border-dark">
+          <tr>
+            <td class="bg-dark-subtle">Categories</td>
+            <td class="bg-dark-subtle">Revenues</td>
+            <td class="bg-dark-subtle">Porcentage of assistance</td>
+          </tr>
+          <tr>
+            <td class="border">00</td>
+            <td class="border">00</td>
+            <td class="border">00</td>
+          </tr>
+          <tr>
+            <td class="border">00</td>
+            <td class="border">00</td>
+            <td class="border">00</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+  <footer class="bg-dark" data-bs-theme="dark">
+    <div class="container-fluid row justify-content-center align-items-center p-2">
+      <div class="d-flex col-auto col-md-4 p-2 w-auto justify-content-around resp-md">
+        <a href="https://www.facebook.com/">
+          <img class="social" src="/image/facebook.png" alt="Logo facebook link">
+        </a>
+        <a href="https://www.instagram.com/">
+          <img class="social" src="/image/instagram.png" alt="Logo instagram link">
+        </a>
+        <a href="https://wa.me/12345">
+          <img class="social" src="/image/whatsapp.png" alt="Logo whatsapp link">
+        </a>
+      </div>
+      <div class="d-flex col-auto col-md-10  justify-content-end w-auto">
+        <p class="fs-6 mt-3">© 2024 - Muchewicz Jonathan Andrés</p>
+      </div>
+    </div>
+  </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
