--- a/details.html
+++ b/details.html
@@ -34,13 +34,12 @@
       </div>
     </nav>
   </header>
-  <main class="bg-dark-subtle d-flex justify-content-center align-items-center h-details text-fs">
+  <main class="bg-dark-subtle d-flex justify-content-center align-items-center h-details text-fs px-2">
 
     <div class="card card-details">
       <div class="row g-0">
         <div class="col-md-4">
-          <img src="/image/music_concert.jpg" class="img-fluid rounded-start w-auto img-card"
-            alt="Metallica in concert">
+          <img src="/image/music_concert.jpg" class="img-fluid rounded w-auto img-card-details" alt="Metallica in concert">
         </div>
         <div class="col-md-8">
           <div class="card-body p-2">
