--- a/pastEvents.html
+++ b/pastEvents.html
@@ -73,94 +73,58 @@
     </div>
 
     <div class="container-fluid row px-1 py-3 justify-content-around w-100">
-      <div class="container-fluid d-flex row col-12 col-md-10 col-lg-5 justify-content-center w-auto m-1">
-        <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
-          <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate">
+      <div class="container-fluid d-flex row col-12 col-md-10 col-lg-7 justify-content-center w-auto m-1">
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate">
-            Category1
+            Food Fair
           </label>
         </div>
-        <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
-          <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate2">
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate2">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate2">
-            Category2
+            Museum
           </label>
         </div>
-        <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
-          <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate3">
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate3">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate3">
-            Category3
+            Costume Party
           </label>
         </div>
-        <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
-          <input class="form-check-input my-1" type="checkbox" value="" id="flexCheckIndeterminate4">
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input my-1 shadow" type="checkbox" value="" id="flexCheckIndeterminate4">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate4">
-            Category4
+            Music Concert
           </label>
         </div>
-        <div class="form-check col-3 col-md-1 mx-2 py-1 w-auto">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate5">
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate5">
           <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
-            Category5
+            Race
+          </label>
+        </div>
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate5">
+          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
+            Book Exchange
+          </label>
+        </div>
+        <div class="form-check col-3 col-md-1 mx-1 py-1 w-auto">
+          <input class="form-check-input shadow" type="checkbox" value="" id="flexCheckIndeterminate5">
+          <label class="form-check-label fw-bolder" for="flexCheckIndeterminate5">
+            Cinema
           </label>
         </div>
       </div>
 
-      <form class="d-flex col-12 col-md-10 col-lg-4 justify-content-end w-auto" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark btn-sm" type="submit">Search</button>
-      </form>
+    <form class="d-flex col-10 col-md-5 col-lg-2 justify-content-end w-auto" role="search">
+      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-dark btn-sm" type="submit">Search</button>
+    </form>
     </div>
 
     <section class="container-fluid row justify-content-center w-100">
-      <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-        <img src="/image/music_concert.jpg" class="card-img-top rounded-top" alt="Metallica in concert">
-        <div class="card-body">
-          <h5 class="card-title">Metallica in concert</h5>
-          <p class="card-text">The only concert of the most emblematic band in the world</p>
-        </div>
-        <div class="card-body d-flex justify-content-between align-items-center">
-          <h6 class="card-title">Price 150</h6>
-          <a href="/details.html" class="btn btn-outline-danger">Details</a>
-        </div>
-      </div>
-
-      <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-        <img src="/image/marathon.jpg" class="card-img-top rounded-top" alt="10K for life">
-        <div class="card-body">
-          <h5 class="card-title">10K for life</h5>
-          <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
-        </div>
-        <div class="card-body d-flex justify-content-between align-items-center">
-          <h6 class="card-title">Price 3</h6>
-          <a href="/details.html" class="btn btn-outline-danger">Details</a>
-        </div>
-      </div>
-
-      <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-        <img src="/image/costume_party.jpg" class="card-img-top rounded-top" alt="Halloween Night">
-        <div class="card-body">
-          <h5 class="card-title">Halloween Night</h5>
-          <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
-        </div>
-        <div class="card-body d-flex justify-content-between align-items-center">
-          <h6 class="card-title">Price 12</h6>
-          <a href="/details.html" class="btn btn-outline-danger">Details</a>
-        </div>
-      </div>
-
-      <div class="card py-3 mb-2 ms-2" style="width: 15rem;">
-        <img src="/image/food_fair.jpg" class="card-img-top rounded-top" alt="Festival of the collectivities">
-        <div class="card-body">
-          <h5 class="card-title">Festival of the collectivities</h5>
-          <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole
-            family.</p>
-        </div>
-        <div class="card-body d-flex justify-content-between align-items-center">
-          <h6 class="card-title">Price 5</h6>
-          <a href="/details.html" class="btn btn-outline-danger">Details</a>
-        </div>
-      </div>
 
     </section>
   </main>
@@ -183,6 +147,7 @@
     </div>
   </footer>
 
+  <script src="/js/pastEvents.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
